WV-991 Fixed overflow issue with pick in older webkit versions

--- a/web/css/new-ui.css
+++ b/web/css/new-ui.css
@@ -269,6 +269,7 @@ display:inline-block;}
 }
 #timeline-footer svg {
     overflow:visible;
+    margin-top:-16px;
 }
 #timeline-footer svg > g{
     overflow:hidden;
